fix version for docker

--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git fetch origin +refs/tags/*:refs/tags/*
           export SDIST_VERSION=$(python setup.py --version)
-          echo "::set-output name=version::${SDIST_VERSION}"
+          echo "::set-output name=version::${SDIST_VERSION/+/_}"
 
 
   dockerize:
