--- a/.github/workflows/notify-downstream.yml
+++ b/.github/workflows/notify-downstream.yml
@@ -16,4 +16,5 @@ jobs:
           token: ${{ secrets.TOOLS_BOT_PAK }}
           repo: ASFHyP3/hyp3-ci
           ref: develop
-          inputs: "${{format('{{\"message\": \"## {0}\\n{1}\"}}', toJSON(github.event.release.name), toJSON(github.event.release.body))}}"
+          inputs: >
+            ${{ toJSON(format('{{"message": "## {0}\n{1}"}}', github.event.release.name, github.event.release.body)) }}
