--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -22,25 +22,5 @@ jobs:
           flake8 --max-line-length=120 --import-order-style=pycharm --statistics \
               --application-import-names hyp3_ci
 
-  gitleaks:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Scan for secrets with gitleaks
-        uses: zricethezav/gitleaks-action@master
-
-  trufflehog:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-python@v1
-        with:
-          python-version: 3.x
-
-      - uses: ASFHyP3/actions/trufflehog@main
+  call-secrets-analysis-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-secrets-analysis.yml@reusable-actions
