--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,6 @@ jobs:
   call-release-workflow:
     uses: ASFHyP3/actions/.github/workflows/reusable-release.yml@reusable-actions
     with:
-      release-prefix: HyP3-CI
+      release_prefix: HyP3-CI
     secrets:
       USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
