--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -13,6 +13,6 @@ on:
 
 jobs:
   call-changelog-check-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-changelog-check.yml@reusable-actions
+    uses: ASFHyP3/actions/.github/workflows/reusable-changelog-check.yml@main
     secrets:
       USER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
