--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   call-release-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-release.yml@reusable-actions
+    uses: ASFHyP3/actions/.github/workflows/reusable-release.yml@main
     with:
       release_prefix: HyP3-CI
     secrets:
