--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -10,17 +10,15 @@ on:
       - main
       - develop
 
-env:
-  HYP3_REGISTRY: 845172464411.dkr.ecr.us-west-2.amazonaws.com
-  AWS_REGION: us-west-2
-  AWS_ACCESS_KEY_ID: ${{ secrets.V2_AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.V2_AWS_SECRET_ACCESS_KEY }}
-
 jobs:
-  pytest:
+  call-pytest-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-pytest.yml@reusable-plugins
+    with:
+      local_package_name: hyp3_ci
+      conda_env_name: hyp3-ci
+
+  dockerize:
     runs-on: ubuntu-latest
-    outputs:
-      SDIST_VERSION: ${{ steps.version.outputs.version }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -33,52 +31,35 @@ jobs:
           activate-environment: hyp3-ci
           environment-file: environment.yml
 
-      - name: Pytest in conda environment
-        shell: bash -l {0}
-        run: |
-          python -m pip install .[develop]
-          pytest --cov=hyp3_ci
-
-      - name: Determine SDIST_VERSION
-        id: version
+      - name: set environment variables
         shell: bash -l {0}
         run: |
           git fetch origin +refs/tags/*:refs/tags/*
           export SDIST_VERSION=$(python setup.py --version)
-          echo "::set-output name=version::${SDIST_VERSION/+/_}"
-
-
-  dockerize:
-    runs-on: ubuntu-latest
-    needs: pytest
-    env:
-      SDIST_VERSION: ${{ needs.pytest.outputs.SDIST_VERSION }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: set environment variables
-        run: |
+          echo "SDIST_VERSION=${SDIST_VERSION/+/_}" >> $GITHUB_ENV
           echo "CI_JOB_TIMESTAMP=$(date --utc --rfc-3339=seconds)" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - uses: aws-actions/configure-aws-credentials@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          registry: ghcr.io
+          username: tools-bot
+          password: ${{ secrets.TOOLS_BOT_PAK }}
 
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v1
+      - name: Lowercase repo for Github Container Registry
+        run: |
+          echo "REPO=${GITHUB_REPOSITORY,,}" >> ${GITHUB_ENV}
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build, tag, and push image to GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: |
-            ${{ env.HYP3_REGISTRY }}/${{ github.event.repository.name }}:${{ env.SDIST_VERSION }}
+            ghcr.io/${{ env.REPO }}:${{ env.SDIST_VERSION }}
           labels: |
             org.opencontainers.image.created=${{ env.CI_JOB_TIMESTAMP }}
             org.opencontainers.image.version=${{ env.SDIST_VERSION }}
@@ -88,16 +69,12 @@ jobs:
         if: github.ref == 'refs/heads/develop'
         uses: akhilerm/tag-push-action@v1.0.0
         with:
-          src: ${{ env.HYP3_REGISTRY }}/${{ github.event.repository.name }}:${{ env.SDIST_VERSION }}
-          dst: ${{ env.HYP3_REGISTRY }}/${{ github.event.repository.name }}:test
+          src: ghcr.io/${{ env.REPO }}:${{ env.SDIST_VERSION }}
+          dst: ghcr.io/${{ env.REPO }}:test
 
       - name: Add latest tag
         if: github.ref == 'refs/heads/main'
         uses: akhilerm/tag-push-action@v1.0.0
         with:
-          src: ${{ env.HYP3_REGISTRY }}/${{ github.event.repository.name }}:${{ env.SDIST_VERSION }}
-          dst: ${{ env.HYP3_REGISTRY }}/${{ github.event.repository.name }}:latest
-
-      - name: Logout of Amazon ECR
-        if: always()
-        run: docker logout ${HYP3_REGISTRY}
+          src: ghcr.io/${{ env.REPO }}:${{ env.SDIST_VERSION }}
+          dst: ghcr.io/${{ env.REPO }}:latest
