--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   call-flake8-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-flake8.yml@reusable-plugins
+    uses: ASFHyP3/actions/.github/workflows/reusable-flake8.yml@main
     with:
       local_package_names: hyp3_ci
 
