--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -12,20 +12,22 @@ on:
 
 jobs:
   call-pytest-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-pytest.yml@reusable-plugins
+    uses: ASFHyP3/actions/.github/workflows/reusable-pytest.yml@main
     with:
       local_package_name: hyp3_ci
       conda_env_name: hyp3-ci
 
   call-version-info-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-version-info.yml@reusable-plugins
+    uses: ASFHyP3/actions/.github/workflows/reusable-version-info.yml@main
     with:
       conda_env_name: hyp3-ci
 
-  call-docker-ghcr-workflow:
+  call-docker-ecr-workflow:
     needs: call-version-info-workflow
-    uses: ASFHyP3/actions/.github/workflows/reusable-docker-ghcr.yml@reusable-plugins
+    uses: ASFHyP3/actions/.github/workflows/reusable-docker-ecr.yml@reusable-aws
     with:
       version_tag: ${{ needs.call-version-info-workflow.outputs.version_tag }}
+      ecr_registry: 845172464411.dkr.ecr.us-west-2.amazonaws.com
     secrets:
-      USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.V2_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.V2_AWS_SECRET_ACCESS_KEY }}
