--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -17,6 +17,14 @@ jobs:
       local_package_name: hyp3_ci
       conda_env_name: hyp3-ci
 
+  call-pytest-matrix-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-pytest-matrix.yml@pytest-matrix
+    with:
+      local_package_name: hyp3_ci
+      conda_env_name: hyp3-ci
+      python_versions: >-
+        ["3.8", "3.10"]
+
 #  call-version-info-workflow:
 #    uses: ASFHyP3/actions/.github/workflows/reusable-version-info.yml@main
 #    with:
