--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -12,10 +12,11 @@ on:
 
 jobs:
   call-pytest-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-pytest.yml@pytest-matrix
+    uses: ASFHyP3/actions/.github/workflows/reusable-pytest-matrix.yml@pytest-matrix
     with:
       local_package_name: hyp3_ci
       conda_env_name: hyp3-ci
+      python_versions: "3.8"
 
   call-pytest-matrix-workflow:
     uses: ASFHyP3/actions/.github/workflows/reusable-pytest-matrix.yml@pytest-matrix
