--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -26,17 +26,17 @@ jobs:
       python_versions: >-
         ["3.8", "3.10"]
 
-#  call-version-info-workflow:
-#    uses: ASFHyP3/actions/.github/workflows/reusable-version-info.yml@main
-#    with:
-#      conda_env_name: hyp3-ci
-#
-#  call-docker-ecr-workflow:
-#    needs: call-version-info-workflow
-#    uses: ASFHyP3/actions/.github/workflows/reusable-docker-ecr.yml@main
-#    with:
-#      version_tag: ${{ needs.call-version-info-workflow.outputs.version_tag }}
-#      ecr_registry: 845172464411.dkr.ecr.us-west-2.amazonaws.com
-#    secrets:
-#      AWS_ACCESS_KEY_ID: ${{ secrets.V2_AWS_ACCESS_KEY_ID }}
-#      AWS_SECRET_ACCESS_KEY: ${{ secrets.V2_AWS_SECRET_ACCESS_KEY }}
+  call-version-info-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-version-info.yml@main
+    with:
+      conda_env_name: hyp3-ci
+
+  call-docker-ecr-workflow:
+    needs: call-version-info-workflow
+    uses: ASFHyP3/actions/.github/workflows/reusable-docker-ecr.yml@docker-wat
+    with:
+      version_tag: ${{ needs.call-version-info-workflow.outputs.version_tag }}
+      ecr_registry: 845172464411.dkr.ecr.us-west-2.amazonaws.com
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.V2_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.V2_AWS_SECRET_ACCESS_KEY }}
