--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -11,13 +11,6 @@ on:
       - develop
 
 jobs:
-  call-pytest-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-pytest-matrix.yml@pytest-matrix
-    with:
-      local_package_name: hyp3_ci
-      conda_env_name: hyp3-ci
-      python_versions: "3.8"
-
   call-pytest-matrix-workflow:
     uses: ASFHyP3/actions/.github/workflows/reusable-pytest-matrix.yml@pytest-matrix
     with:
@@ -31,12 +24,10 @@ jobs:
     with:
       conda_env_name: hyp3-ci
 
-  call-docker-ecr-workflow:
+  call-docker-ghcr-workflow:
     needs: call-version-info-workflow
-    uses: ASFHyP3/actions/.github/workflows/reusable-docker-ecr.yml@docker-wat
+    uses: ASFHyP3/actions/.github/workflows/reusable-docker-ghcr.yml@docker-wat
     with:
       version_tag: ${{ needs.call-version-info-workflow.outputs.version_tag }}
-      ecr_registry: 845172464411.dkr.ecr.us-west-2.amazonaws.com
     secrets:
-      AWS_ACCESS_KEY_ID: ${{ secrets.V2_AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.V2_AWS_SECRET_ACCESS_KEY }}
+      USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
