--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -11,13 +11,13 @@ on:
       - develop
 
 jobs:
-  call-pytest-matrix-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-pytest-matrix.yml@pytest-matrix
-    with:
-      local_package_name: hyp3_ci
-      conda_env_name: hyp3-ci
-      python_versions: >-
-        ["3.8", "3.10"]
+#  call-pytest-matrix-workflow:
+#    uses: ASFHyP3/actions/.github/workflows/reusable-pytest-matrix.yml@pytest-matrix
+#    with:
+#      local_package_name: hyp3_ci
+#      conda_env_name: hyp3-ci
+#      python_versions: >-
+#        ["3.8", "3.10"]
 
   call-version-info-workflow:
     uses: ASFHyP3/actions/.github/workflows/reusable-version-info.yml@main
