--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -27,5 +27,6 @@ jobs:
     uses: ASFHyP3/actions/.github/workflows/reusable-docker-ghcr.yml@develop
     with:
       version_tag: ${{ needs.call-version-info-workflow.outputs.version_tag }}
+      user: ${{ github.actor }}
     secrets:
-      USER_TOKEN: ${{ secrets.TOOLS_BOT_PAK }}
+      USER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
